# genshin-leaderboard-race

./: README.md  TO_DO.md  all_dates.md  pyproject.toml  rakings.json  releases_genshin.md  selected_tables.yaml
.copilot/: requirements.md  tasks.md  technical-plan.md
archive_tooling/: README.md  __init__.py  cdx.py  cli.py  manifest.py  release_ticks.py  validation.py
archive_tooling/acquire_html/: README.md  __init__.py  cache.py  inspect.py
data/: characters.json  colors.txt  overrides.txt  release_ticks.json  snapshot_manifest.json  template.csv
data/cdx/: game8_tierlist_cdx.json
data/csv/: main_dps.csv  sub_dps.csv  support.csv  template.csv
data/extracted_rankings/csv/: template.csv
data/extracted_rankings/json/: 1.0B.json  1.1B.json  1.2A.json  1.2B.json  1.3A.json  1.3B.json  1.4B.json  1.5A.json  1.5B.json  1.6B.json  2.0A.json  2.0B.json  2.1A.json  2.1B.json  2.2B.json  2.3B.json  2.4A.json  2.5A.json  2.6A.json  2.7A.json  2.7B.json  2.8A.json  3.0A.json  3.0B.json  3.1A.json  3.1B.json  3.2A.json  3.3A.json  3.4A.json  3.5A.json  3.5B.json  3.6B.json  3.7A.json  4.0A.json  4.0B.json  4.1A.json  4.1B.json  (+32 more)
extract_rankings/: __init__.py  cli.py  extractor.py  html_to_json.py  json_names.py  parser.py
extract_transform/: README.md  __init__.py  cli.py
generate_csv/: __init__.py  cli.py
schemas/: release_ticks.schema.json  snapshot_manifest.schema.json
tests/: test_acquire_html_cache.py  test_acquire_html_inspect.py  test_generate_csv.py  test_html_to_json.py  test_json_names.py  test_manifest.py  test_release_ticks.py  test_validation.py
(+283 files in other folders)
